--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -32,11 +32,13 @@ jobs:
         uses: actions/checkout@v3
       - name: Setup Pages
         uses: actions/configure-pages@v2
+      - name: Update index.html file
+        run: sed -i '' 's/COMMIT/${GITHUB_SHA::3}/g' index.html
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
           # Upload entire repository
-          path: '.'
+          path: "."
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
