test custom actions

--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v2
       - name: Update index.html file
-        run: sed -i -e 's/COMMIT/${GITHUB_SHA::3}/g' ./index.html
+        run: sed -i -e "s|COMMIT|${GITHUB_SHA::5}|g" ./index.html
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
