--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -35,7 +35,9 @@ jobs:
       - name: Update index.html file
         run: |
           sed -i -e "s|COMMIT|${GITHUB_SHA::5}|g" ./index.html
-          node --version
+          sed -i -e "s|main.css|main.min.css|g" ./index.html
+          sed -i -e "s|calc.js|calc.min.js|g" ./index.html
+          npm run minify
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
