test custom actions

--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -37,6 +37,7 @@ jobs:
           sed -i -e "s|COMMIT|${GITHUB_SHA::5}|g" ./index.html
           sed -i -e "s|main.css|main.min.css|g" ./index.html
           sed -i -e "s|calc.js|calc.min.js|g" ./index.html
+          npm i
           npm run minify
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
