--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "minify:css": "minify ./public/assets/css/main.css > ./public/assets/css/main.min.css",
     "minify:html": "minify ./public/index.html > ./public/index.min.html",
     "minify": "npm run minify:js && npm run minify:css && npm run minify:html",
-    "replace:commit": "LAST_COMMIT_SHA=`git log -n1 --format=\"%h\"` && sed -i -e \"s|COMMIT|${LAST_COMMIT_SHA::5}|g\" ./public/index.html",
+    "replace:commit": "sed -i -e \"s|COMMIT|${GITHUB_SHA::5}|g\" ./public/index.html",
     "build": "rm -rf ./public && cp -r ./src ./public && npm run replace:commit && npm run minify"
   },
   "repository": {
