--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -49,3 +49,5 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
+      - name: Send Push
+        run: curl -s -F "token=${{ secrets.PUSHOVER_TOKEN }}" -F "user=${{ secrets.PUSHOVER_USER }}" -F "device=iphone_pool" -F "title=TipiT Deployed Git Pages" -F "message=New version of http://tipit.web.app ready" https://api.pushover.net/1/messages
