--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -23,3 +23,5 @@ jobs:
           channelId: live
           target: tipit
           projectId: calltheday-oe
+      - name: Send Push
+        run: curl -s -F "token=${{ secrets.PUSHOVER_TOKEN }}" -F "user=${{ secrets.PUSHOVER_USER }}" -F "device=iphone_pool" -F "title=TipiT Deployed Firebase" -F "message=New version of http://tipit.web.app ready" https://api.pushover.net/1/messages
