Add eslint basic

--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "singleQuote": false
   },
   "devDependencies": {
+    "minify": "^9.1.0",
     "prettier": "^2.7.1",
-    "minify": "^9.1.0"
-  }
+    "eslint": "^8.25.0"
+  },
+  "dependencies": {}
 }
