--- a/package.json
+++ b/package.json
@@ -31,9 +31,10 @@
     "singleQuote": false
   },
   "devDependencies": {
+    "eslint": "^8.25.0",
     "minify": "^9.1.0",
     "prettier": "^2.7.1",
-    "eslint": "^8.25.0"
-  },
-  "dependencies": {}
+    "stylelint": "^14.14.0",
+    "stylelint-config-standard": "^29.0.0"
+  }
 }
